--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Richwood",
   "license": "ISC",
   "dependencies": {
+    "displacejs": "^1.4.1",
     "gsap": "^3.1.1",
     "imports-loader": "^0.8.0",
     "jquery": "^3.4.1",
