--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "modernizr": "^3.9.0"
   },
   "devDependencies": {
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
